# connect-4

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md
benches/: board_bench.rs
src/: board.rs  lib.rs  main.rs  search_for_win.rs  strategy.rs  strategy_cache.rs
