[package]
name = "connect-4"
version = "0.1.4"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.99", features = ["backtrace"] }
clap = { version = "4.0", features = ["derive"] }
colorize = "0.1.0"
console = "0.16.0"
indicatif = "0.18.0"
inquire = "0.7.5"
rand = "0.9.2"
scopeguard = "1.2.0"
